// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionSchema empty 1`] = `
"4 validation issue(s)

  Issue #0: invalid_type at id
  Required

  Issue #1: invalid_enum_value at type
  Input must be one of these values: Slider, ChoicesWithSingleAnswer, ChoicesWithMultipleAnswers, YesNo, MultipleText, HowLongAgo, Branch, BranchWithRelativeComparison

  Issue #2: invalid_type at question
  Required

  Issue #3: invalid_type at next
  Required
"
`;

exports[`QuestionSchema incomplete fields 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at slider
  Required
"
`;

exports[`QuestionSchema invalid type 1`] = `
"1 validation issue(s)

  Issue #0: invalid_enum_value at type
  Input must be one of these values: Slider, ChoicesWithSingleAnswer, ChoicesWithMultipleAnswers, YesNo, MultipleText, HowLongAgo, Branch, BranchWithRelativeComparison
"
`;

exports[`QuestionSchema mismatch type 1`] = `
"2 validation issue(s)

  Issue #0: unrecognized_keys at 
  Unrecognized key(s) in object: 'defaultValueFromQuestionId', 'slider'

  Issue #1: invalid_type at choices
  Required
"
`;

exports[`QuestionSchema missing type 1`] = `
"2 validation issue(s)

  Issue #0: unrecognized_keys at 
  Unrecognized key(s) in object: 'defaultValueFromQuestionId', 'slider'

  Issue #1: invalid_enum_value at type
  Input must be one of these values: Slider, ChoicesWithSingleAnswer, ChoicesWithMultipleAnswers, YesNo, MultipleText, HowLongAgo, Branch, BranchWithRelativeComparison
"
`;

exports[`QuestionSchema next should not be undefined 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at next
  Required
"
`;

exports[`SliderQuestionSchema default value range 0 - 100: <0 1`] = `
"1 validation issue(s)

  Issue #0: too_small at defaultValue
  Value should be greater than or equal to 0
"
`;

exports[`SliderQuestionSchema default value range 0 - 100: >100 1`] = `
"1 validation issue(s)

  Issue #0: too_big at defaultValue
  Value should be less than or equal to 100
"
`;

exports[`SliderQuestionSchema defaultValueFromQuestionId cannot be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at defaultValueFromQuestionId
  Invalid input
"
`;

exports[`SliderQuestionSchema defaultValueFromQuestionId is question ID 1`] = `
"1 validation issue(s)

  Issue #0: custom_error at defaultValueFromQuestionId
  Question ID can only include letters, numbers, and \\"_\\".
"
`;

exports[`SliderQuestionSchema slider tuple: one item 1`] = `
"1 validation issue(s)

  Issue #0: too_small at slider
  Should have at least 2 items
"
`;

exports[`SliderQuestionSchema slider tuple: three items 1`] = `
"1 validation issue(s)

  Issue #0: too_big at slider
  Should have at most 2 items
"
`;

exports[`SliderQuestionSchema slider tuple: zero item 1`] = `
"1 validation issue(s)

  Issue #0: too_small at slider
  Should have at least 2 items
"
`;

exports[`SliderQuestionSchema type 1`] = `
"1 validation issue(s)

  Issue #0: invalid_literal_value at type
  Input must be \\"Slider\\"
"
`;
